--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=unmaintained/2023.1
+# renovate: name=openstack/heat repo=https://github.com/openstack/heat.git branch=unmaintained/2023.1
 ARG HEAT_GIT_REF=cab4293ee3b4aa99b4dc9d3fab2a34dc4957d9eb
-ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#${HEAT_GIT_REF} /src/heat
+ADD --keep-git-dir=true https://github.com/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
