--- a/images/placement/Dockerfile
+++ b/images/placement/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/placement repo=https://opendev.org/openstack/placement.git branch=unmaintained/2023.1
+# renovate: name=openstack/placement repo=https://github.com/openstack/placement.git branch=unmaintained/2023.1
 ARG PLACEMENT_GIT_REF=938fc62550d1a20b5e573a96c03528e79d109b30
-ADD --keep-git-dir=true https://opendev.org/openstack/placement.git#${PLACEMENT_GIT_REF} /src/placement
+ADD --keep-git-dir=true https://github.com/openstack/placement.git#${PLACEMENT_GIT_REF} /src/placement
 RUN git -C /src/placement fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
