--- a/images/senlin/Dockerfile
+++ b/images/senlin/Dockerfile
@@ -3,7 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/senlin.git#2023.1-eol /src/senlin
+ADD --keep-git-dir=true https://github.com/openstack/senlin.git#2023.1-eol /src/senlin
 RUN git -C /src/senlin fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
