--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,7 @@
     {
       "groupName": "openstack",
       "matchDatasources": ["git-refs"],
-      "matchPackageNames": ["https://opendev.org/openstack/**"]
+      "matchPackageNames": ["https://github.com/openstack/**"]
     }
   ],
   "customManagers": [
