--- a/images/cinder/Dockerfile
+++ b/images/cinder/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2025-02-18T16:06:32Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/cinder repo=https://opendev.org/openstack/cinder.git branch=unmaintained/zed
+# renovate: name=openstack/cinder repo=https://github.com/openstack/cinder.git branch=unmaintained/zed
 ARG CINDER_GIT_REF=9871cfefa8b8ce801ada787341b8048cf6a823d5
-ADD --keep-git-dir=true https://opendev.org/openstack/cinder.git#${CINDER_GIT_REF} /src/cinder
+ADD --keep-git-dir=true https://github.com/openstack/cinder.git#${CINDER_GIT_REF} /src/cinder
 RUN git -C /src/cinder fetch --unshallow
 COPY patches/cinder /patches/cinder
 RUN git -C /src/cinder apply --verbose /patches/cinder/*
