--- a/images/senlin/Dockerfile
+++ b/images/senlin/Dockerfile
@@ -4,7 +4,7 @@
 
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/senlin.git#zed-eol /src/senlin
+ADD --keep-git-dir=true https://github.com/openstack/senlin.git#zed-eol /src/senlin
 RUN git -C /src/senlin fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
