--- a/images/ironic/Dockerfile
+++ b/images/ironic/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/ironic repo=https://opendev.org/openstack/ironic.git branch=stable/2024.1
+# renovate: name=openstack/ironic repo=https://github.com/openstack/ironic.git branch=stable/2024.1
 ARG IRONIC_GIT_REF=1e9877f4a5dffd98be2d0127ff671a87787f9597
-ADD --keep-git-dir=true https://opendev.org/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
+ADD --keep-git-dir=true https://github.com/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
 RUN git -C /src/ironic fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
