--- a/images/nova/Dockerfile
+++ b/images/nova/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-12-17T01:27:44Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/nova repo=https://opendev.org/openstack/nova.git branch=stable/2024.1
+# renovate: name=openstack/nova repo=https://github.com/openstack/nova.git branch=stable/2024.1
 ARG NOVA_GIT_REF=1aeeb96ffa646f4b4ebd2af8336e9f6eba4e974a
-ADD --keep-git-dir=true https://opendev.org/openstack/nova.git#${NOVA_GIT_REF} /src/nova
+ADD --keep-git-dir=true https://github.com/openstack/nova.git#${NOVA_GIT_REF} /src/nova
 RUN git -C /src/nova fetch --unshallow
 # renovate: name=vexxhost/nova-scheduler-filters repo=https://github.com/vexxhost/nova-scheduler-filters.git branch=main
 ARG SCHEDULER_FILTERS_GIT_REF=77ed1c2ca70f4166a6d0995c7d3d90822f0ca6c0
