--- a/images/designate/Dockerfile
+++ b/images/designate/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/designate repo=https://opendev.org/openstack/designate.git branch=stable/2025.1
+# renovate: name=openstack/designate repo=https://github.com/openstack/designate.git branch=stable/2025.1
 ARG DESIGNATE_GIT_REF=a891d81974a4c3aa56a143252b26df9dcbd5fba5
-ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
+ADD --keep-git-dir=true https://github.com/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
 RUN git -C /src/designate fetch --unshallow
 COPY patches/designate /patches/designate
 RUN git -C /src/designate apply --verbose /patches/designate/*
