--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,9 +3,9 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=stable/2025.1
+# renovate: name=openstack/heat repo=https://github.com/openstack/heat.git branch=stable/2025.1
 ARG HEAT_GIT_REF=1ba2f085324fde3a66024e48659ecdf9fb151659
-ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#${HEAT_GIT_REF} /src/heat
+ADD --keep-git-dir=true https://github.com/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
