--- a/images/barbican/Dockerfile
+++ b/images/barbican/Dockerfile
@@ -3,7 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/barbican.git#2023.2-eol /src/barbican
+ADD --keep-git-dir=true https://github.com/openstack/barbican.git#2023.2-eol /src/barbican
 RUN git -C /src/barbican fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
