--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,7 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#2023.2-eol /src/heat
+ADD --keep-git-dir=true https://github.com/openstack/heat.git#2023.2-eol /src/heat
 RUN git -C /src/heat fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
