--- a/images/magnum/Dockerfile
+++ b/images/magnum/Dockerfile
@@ -11,7 +11,7 @@ RUN tar -xzf /helm.tar.gz
 RUN mv /${TARGETOS}-${TARGETARCH}/helm /usr/bin/helm
 
 FROM openstack-venv-builder AS build
-ADD --keep-git-dir=true https://opendev.org/openstack/magnum.git#2023.2-eol /src/magnum
+ADD --keep-git-dir=true https://github.com/openstack/magnum.git#2023.2-eol /src/magnum
 RUN git -C /src/magnum fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
