chore: add diffs for github

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
   ],
   "prHourlyLimit": 10,
   "prBodyDefinitions": {
-    "OpenDev Links": "[Compare changes](https://opendev.org/{{{depName}}}/compare/{{{currentDigest}}}...{{{newDigest}}})"
+    "GitHub Links": "[Compare changes](https://github.com/{{{depName}}}/compare/{{{currentDigest}}}...{{{newDigest}}})"
   },
   "packageRules": [
     {
@@ -54,13 +54,13 @@
         "git-refs"
       ],
       "matchPackageNames": [
-        "https://opendev.org/**"
+        "https://opendev.org/openstack/**"
       ],
       "prBodyColumns": [
         "Package",
         "Update",
         "Change",
-        "OpenDev Links"
+        "GitHub Links"
       ]
     },
     {
