update branch and commit hash for stable 2025.1

--- a/images/neutron/Dockerfile
+++ b/images/neutron/Dockerfile
@@ -27,8 +27,8 @@ RUN git -C /src/neutron-policy-server fetch --unshallow
 ARG LOG_PASER_GIT_REF=3895d8f9d004e612c71b4f798d31c758e113946b
 ADD --keep-git-dir=true https://github.com/vexxhost/neutron-ovn-network-logging-parser.git#${LOG_PASER_GIT_REF} /src/neutron-ovn-network-logging-parser
 RUN git -C /src/neutron-ovn-network-logging-parser fetch --unshallow
-# renovate: name=openstack/tap-as-a-service repo=https://opendev.org/openstack/tap-as-a-service.git branch=master
-ARG TAP_AS_A_SERVICE_GIT_REF=c06a9ff7963e23b2c7faff89b188bd9295a753cc
+# renovate: name=openstack/tap-as-a-service repo=https://opendev.org/openstack/tap-as-a-service.git branch=stable/2025.1
+ARG TAP_AS_A_SERVICE_GIT_REF=5361d044747bd67133008d75425b06abe25ba64d
 ADD --keep-git-dir=true https://opendev.org/openstack/tap-as-a-service.git#${TAP_AS_A_SERVICE_GIT_REF} /src/tap-as-a-service
 RUN git -C /src/tap-as-a-service fetch --unshallow
 RUN \
