chore: add pymemcache to replace python-memcached
Signed-off-by: Yaguang Tang <yaguang.tang@vexxhost.com>
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -41,5 +41,6 @@ uv pip install \
         pymysql \
         python-binary-memcached \
         python-memcached \
+        pymemcache \
         uwsgi
 EOF
