chore: add pymemcahed to neutron
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/neutron/Dockerfile
+++ b/images/neutron/Dockerfile
@@ -38,7 +38,8 @@ uv pip install \
         /src/networking-baremetal \
         /src/networking-generic-switch \
         /src/neutron-policy-server \
-        /src/neutron-ovn-network-logging-parser
+        /src/neutron-ovn-network-logging-parser \
+        pymemcache
 EOF
 
 FROM openstack-python-runtime
