feat: use kafka for oslo notification
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/.charts.yml
+++ b/.charts.yml
@@ -99,6 +99,10 @@ charts:
       gerrit:
         review.opendev.org:
           - 925931
+  - name: strimzi-kafka-operator
+    version: 0.47.0
+    repository:
+      url: oci://quay.io/strimzi-helm
   - name: keycloak
     version: 21.4.1
     repository:
