--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -99,6 +99,8 @@ _atmosphere_images:
   ironic_pxe: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ironic:{{ atmosphere_release }}"
   ironic_retrive_cleaning_network: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
   ironic_retrive_swift_config: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/heat:{{ atmosphere_release }}"
+  kafka_cluster_operator: "{{ atmosphere_image_prefix }}quay.io/strimzi/operator:0.47.0"
+  kafka_cluster: "{{ atmosphere_image_prefix }}quay.io/strimzi/kafka:0.47.0-kafka-4.0.0"
   keepalived: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/keepalived:{{ atmosphere_release }}"
   keycloak: "{{ atmosphere_image_prefix }}quay.io/keycloak/keycloak:24.0.5-0"
   keystone_api: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/keystone:{{ atmosphere_release }}"
