--- a/playbooks/infrastructure.yml
+++ b/playbooks/infrastructure.yml
@@ -40,6 +40,14 @@
       tags:
         - percona-xtradb-cluster
 
+    - role: kafka_operator
+      tags:
+        - kafka-operator
+
+    - role: kafka_cluster
+      tags:
+        - kafka-cluster
+
     - role: valkey
       tags:
         - valkey
