rename kafka operator role
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/playbooks/infrastructure.yml
+++ b/playbooks/infrastructure.yml
@@ -40,7 +40,7 @@
       tags:
         - percona-xtradb-cluster
 
-    - role: kafka_operator
+    - role: kafka_cluster_operator
       tags:
         - kafka-operator
 
